新增：tomcat优化